--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/castiron/cicbase",
   "license": ["GPL-2.0+"],
   "keywords": ["TYPO3 CMS"],
+  "typo3/cms-core": ">=7.6.0,<8.0",
   "autoload": {
     "psr-4": {
       "CIC\\Cicbase\\": "Classes"
